      port fails because we have overrun the limit on the number of
      connections, tell the controller that the request has failed.
    - Avoid using too little bandwidth when Tor skips a few seconds.  Bugfix
      on 0.1.2.x.
    - Fix shell error when warning about missing packages in configure
      script, on fedora or redhat machines. Bugfix on 0.2.0.x.

  o Code simplifications and refactoring:
    - Remove some needless generality from cpuworker code, for improved
      type-safety.
    - Stop overloading the circuit_t.onionskin field for both "onionskin
      from a CREATE cell that we are waiting for a cpuworker to be
      assigned" and "onionskin from an EXTEND cell that we are going to
      send to an OR as soon as we are connected".
    - Add an in-place version of aes_crypt so that we can avoid doing a
      needless memcpy() call on each cell payload.


Changes in version 0.2.0.18-alpha - 2008-01-25
  o New directory authorities:
    - Set up dannenberg (run by CCC) as the sixth v3 directory
      authority.

  o Major bugfixes:
    - Fix a major memory leak when attempting to use the v2 TLS
      handshake code. Bugfix on 0.2.0.x; fixes bug 589.
    - We accidentally enabled the under-development v2 TLS handshake
      code, which was causing log entries like "TLS error while
      renegotiating handshake". Disable it again. Resolves bug 590.
    - We were computing the wrong Content-Length: header for directory
      responses that need to be compressed on the fly, causing clients
      asking for those items to always fail. Bugfix on 0.2.0.x; fixes
      bug 593.

  o Major features:
    - Avoid going directly to the directory authorities even if you're a
      relay, if you haven't found yourself reachable yet or if you've
      decided not to advertise your dirport yet. Addresses bug 556.
    - If we've gone 12 hours since our last bandwidth check, and we
      estimate we have less than 50KB bandwidth capacity but we could