@@ -59,6 +59,8 @@ Changes in version 0.2.0.19-alpha - 2008-02-??
       on 0.1.2.x.
     - Fix shell error when warning about missing packages in configure
       script, on fedora or redhat machines. Bugfix on 0.2.0.x.
+    - Do not become confused when receiving a spurious VERSIONS-like
+      cell from a confused v1 client.  Bugfix on 0.2.0.x.
 
   o Code simplifications and refactoring:
     - Remove some needless generality from cpuworker code, for improved
